--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,11 +1,12 @@
 server {
   listen 80;
+  index index.html;
+  client_max_body_size 20M;
 
   location /api/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8080/api/;
+    proxy_pass http://backend:8000/api/;
   }
-
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
@@ -13,6 +14,6 @@ server {
 
   location / {
     alias /staticfiles/;
-    index index.html;
+    try_files $uri $uri/ /index.html;
   }
 }
